--- a/force-app/main/default/classes/InheritedAccessFlowDemo.cls
+++ b/force-app/main/default/classes/InheritedAccessFlowDemo.cls
@@ -4,8 +4,12 @@ public inherited sharing class InheritedAccessFlowDemo {
                      category='Sharing Demos')
     public static List<List<Opportunity>> execute() {
         List<List<Opportunity>> results = new List<List<Opportunity>>();
-        List<Opportunity> opportunities = [SELECT Id, Name, StageName FROM Opportunity LIMIT 5];
+        List<Opportunity> opportunities = getRecords();
         results.add(opportunities);
         return results;
+    }
+
+    public static List<Opportunity> getRecords() {
+        return [SELECT Id, Name, StageName FROM Opportunity LIMIT 5];
     }
 }
