--- a/force-app/main/default/classes/DefaultAccessDemo.cls
+++ b/force-app/main/default/classes/DefaultAccessDemo.cls
@@ -2,7 +2,7 @@
 public class DefaultAccessDemo {
     @AuraEnabled
     public static List<Opportunity> getRecords() {
-        return [SELECT Id, Name, StageName FROM Opportunity LIMIT 5];
+        return [SELECT Id, Name, StageName, Type FROM Opportunity LIMIT 5];
     }
 
     // Static methods to instantiate and call inner classes
@@ -51,7 +51,7 @@ public class DefaultAccessDemo {
     public class DefaultNested {
         @AuraEnabled
         public List<Opportunity> getRecords() {
-            return [SELECT Id, Name, StageName FROM Opportunity LIMIT 5];
+            return [SELECT Id, Name, StageName, Type FROM Opportunity LIMIT 5];
         }
     }
     
@@ -59,7 +59,7 @@ public class DefaultAccessDemo {
     public with sharing class WithSharingNested {
         @AuraEnabled
         public List<Opportunity> getRecords() {
-            return [SELECT Id, Name, StageName FROM Opportunity LIMIT 5];
+            return [SELECT Id, Name, StageName, Type FROM Opportunity LIMIT 5];
         }
     }
     
@@ -67,7 +67,7 @@ public class DefaultAccessDemo {
     public without sharing class WithoutSharingNested {
         @AuraEnabled
         public List<Opportunity> getRecords() {
-            return [SELECT Id, Name, StageName FROM Opportunity LIMIT 5];
+            return [SELECT Id, Name, StageName, Type FROM Opportunity LIMIT 5];
         }
     }
     
@@ -75,7 +75,7 @@ public class DefaultAccessDemo {
     public inherited sharing class InheritedSharingNested {
         @AuraEnabled
         public List<Opportunity> getRecords() {
-            return [SELECT Id, Name, StageName FROM Opportunity LIMIT 5];
+            return [SELECT Id, Name, StageName, Type FROM Opportunity LIMIT 5];
         }
     }
 }
