--- a/force-app/main/default/classes/WithSharingDemo.cls
+++ b/force-app/main/default/classes/WithSharingDemo.cls
@@ -2,7 +2,7 @@
 public with sharing class WithSharingDemo {
     @AuraEnabled
     public static List<Opportunity> getRecords() {
-        return [SELECT Id, Name, StageName FROM Opportunity LIMIT 5];
+        return [SELECT Id, Name, StageName, Type FROM Opportunity LIMIT 5];
     }
    
     // Static methods to instantiate and call inner classes
@@ -50,28 +50,28 @@ public with sharing class WithSharingDemo {
     public class DefaultNested {
         @AuraEnabled
         public List<Opportunity> getRecords() {
-            return [SELECT Id, Name, StageName FROM Opportunity LIMIT 5];
+            return [SELECT Id, Name, StageName, Type FROM Opportunity LIMIT 5];
         }
     }
     
     public with sharing class WithSharingNested {
         @AuraEnabled
         public List<Opportunity> getRecords() {
-            return [SELECT Id, Name, StageName FROM Opportunity LIMIT 5];
+            return [SELECT Id, Name, StageName, Type FROM Opportunity LIMIT 5];
         }
     }
     
     public without sharing class WithoutSharingNested {
         @AuraEnabled
         public List<Opportunity> getRecords() {
-            return [SELECT Id, Name, StageName FROM Opportunity LIMIT 5];
+            return [SELECT Id, Name, StageName, Type FROM Opportunity LIMIT 5];
         }
     }
     
     public inherited sharing class InheritedSharingNested {
         @AuraEnabled
         public List<Opportunity> getRecords() {
-            return [SELECT Id, Name, StageName FROM Opportunity LIMIT 5];
+            return [SELECT Id, Name, StageName, Type FROM Opportunity LIMIT 5];
         }
     }
 }
