--- a/force-app/main/default/classes/WithoutSharingAccessFlowDemo.cls
+++ b/force-app/main/default/classes/WithoutSharingAccessFlowDemo.cls
@@ -10,6 +10,6 @@ public without sharing class WithoutSharingAccessFlowDemo {
     }
 
     public static List<Opportunity> getRecords() {
-        return [SELECT Id, Name, StageName FROM Opportunity LIMIT 5];
+        return [SELECT Id, Name, StageName, Type FROM Opportunity LIMIT 5];
     }
 }
